@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- New function Fl::event_original_key() returns key 
+	  code before NumLock handling.
 	- Many OS X Quartz fixes (STR #1310, etc.)
 	- Fixed shortcut and default focus for message
 	  dialogs (STR #1298)
